--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.5.1",
+    "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
+    "css-reset-and-normalize": "^2.3.6",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "jose": "^4.13.1",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.12.0",
+    "tailwindcss": "^3.3.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
