--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.22",
     "prisma": "^4.12.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
