--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://postgres:7m6ABwyGyDVB7rPmSkWx@containers-us-west-185.railway.app:5816/railway?schema=public"
+JWT_SECRET="shhhh_phir_koi_hai!"
