added code for JWT from cookies

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://postgres:7m6ABwyGyDVB7rPmSkWx@containers-us-west-185.railway.app:5816/railway?schema=public"
 JWT_SECRET="shhhh_phir_koi_hai!"
+COOKIE_NAME="__project__next__app__"
